Frankbelford/uatv1ba/force-app/main/default/objects/Account_Audit__c/Account_Audit__c.object-meta.xml
<CustomObject>
    <label>Account Audit</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Audit No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>