Frankbelford/uatv1ba/force-app/main/default/objects/Account_Audit__c/fields/Name_of_auditor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>